--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.0.1",
     "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "apollo-client": "^2.6.4",
+    "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
     "graphql": "^14.5.4",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
